[tool.poetry]
name = "NeCSuS"
version = "0.0.0"
description = "Slack, but for NCSS students."
authors = [
	"Kenni Bawden",
	"Ben Taylor",
	"Aleksa Sarai <cyphar@cyphar.com>",
	"Tom Kunc",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
flask = "^1.1"
flask-swagger = "^0.2"
flask-swagger-ui = "^3.36"
pytz = "*"
pypika = "^0.47"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
